# streamlit_example

./: main.ipynb  main.py  pyproject.toml
data/: alunos.csv
